--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Your site is published at <a>https://github.com/BbillyMai/BbillyMai.github.io.git</a>
+Your site is published at <a href="https://bbillymai.github.io/">https://github.com/BbillyMai/BbillyMai.github.io.git</a>
